@@ -1,3 +1,8 @@
+2010-04-25 01:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
+
+	* WinNSOpenPanel.m: Switch File Type filters to be a combined filter 
+	instead of a series of individual filters.
+
 2010-04-21 01:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
 
 	* WinNSOpenPanel.m: Use wcscpy to copy unichar strings.
